--- a/src/app/modules/expense/expense-request/expense-request.component.html
+++ b/src/app/modules/expense/expense-request/expense-request.component.html
@@ -16,7 +16,7 @@
   [tableActions]="tableActions"
   (tableActionClicked)="tableActionClick($event)"
 >
-<div custom-form>
+<div custom-forma>
   <div class="form-group">
     <label>Employee</label>
     <div>
