--- a/src/app/modules/expense/expense-sub-type/expense-sub-type.component.html
+++ b/src/app/modules/expense/expense-sub-type/expense-sub-type.component.html
@@ -1,1 +1,20 @@
-<p>expense-sub-type works!</p>
+
+<ngx-page
+(topActionClicked)="pageActionClicked($event)"
+[(showModal)]="showModal"
+[pageTitle]="getPageTitle()"
+[requiredButton]="getRequiredButton()"
+[formConfig]="formConfig"
+[(value)]="editingData"
+(formCompleted)="submitForm()"
+(formCancelled)="hideModal()"
+[tableData]="data"
+[tableColumns]="getTableColumns()"
+[loadingSave]="loadingSave"
+[formTitle]="getFormTitle()"
+[emptyConfig]="emptyConfig"
+[loading]="loading"
+[tableActions]="tableActions"
+(tableActionClicked)="tableActionClick($event)"
+>
+</ngx-page>
