--- a/src/app/modules/employeemodule/managementexist/managementexist.component.html
+++ b/src/app/modules/employeemodule/managementexist/managementexist.component.html
@@ -69,16 +69,17 @@
         </div>
         <!-- <hr>jj-{{selectedOption}}=uuuu -->
         <div class="form-group row" style="margin-top: 15px;">
-          <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Upload Affected Employee</label>
+          <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Select Affected Employee</label>
           <div class="col-sm-8">
-            <nb-radio-group  name="selectedOption" [(ngModel)]="uploadOption" class="d-flex">
+            <!-- <nb-radio-group  name="selectedOption" [(ngModel)]="uploadOption" class="d-flex">
               <nb-radio [value]="1">Bulk Upload</nb-radio>
               <nb-radio [value]="2">Individual Upload</nb-radio>
 
-            </nb-radio-group>
+            </nb-radio-group> -->
+            <ngx-employee-master-search  (masterSubmitted)="getSelectedEmployee($event)" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
           </div>
         </div>
-         <div class="form-group row">
+         <!-- <div class="form-group row">
           <div class="col-md-4" style="display: flex;align-items:center">
             <label for="" *ngIf="uploadOption == 1">Upload Employee CSV File</label>
             <label for="" *ngIf="uploadOption == 2">Employee Master</label>
@@ -99,7 +100,7 @@
             <ngx-employee-master-search *ngIf="uploadOption == 2" (masterSubmitted)="getSelectedEmployee($event)" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
      
           </div>
-        </div>
+        </div> -->
         <div style="border-bottom: 0.800000011920929px solid #CED4DA;padding-bottom: 5px;"></div>
 <div style="padding:5px"></div>
         <!-- <div class="form-group row">
@@ -135,7 +136,7 @@
 
         <div class="row">
 
-          <div class="offset-sm-4 col-sm-8" style=" display: flex;justify-content: center; margin-top: 3rem;margin-bottom: 2rem;">
+          <div class="offset-sm-4 col-sm-8" style=" display: flex; margin-top: 3rem;margin-bottom: 2rem;">
 
             <ngx-loadable-button [loading]="loading" [disabled]="exitForm.invalid" (click)="submitRetirement()" >
               Submit
