--- a/src/app/modules/loan/loan-request/loan-request.component.html
+++ b/src/app/modules/loan/loan-request/loan-request.component.html
@@ -67,25 +67,25 @@
                   </div>
 
                   <div class="col-sm-6">
-                    <select class="form-control" name="loanType" [(ngModel)]="loanModel.loanTypeName">
+                    <select class="form-control" name="loanType" [(ngModel)]="loanModel.loanTypeId">
                       <option value="">--Select Loan Type--</option>
                       <option *ngFor="let myType of allloanTypes" [value]="myType.code">{{ myType.name }}</option>
                     </select>
                   </div>
                 </div>
 
-                  <!-- <div class="form-group row">
+                  <div class="form-group row">
                     <div class="col-sm-4">
                       <label for="">Interest Type</label>
                     </div>
 
                     <div class="col-sm-6">
-                      <select class="form-control" name="loanType" [(ngModel)]="loanModel.interestRate">
+                      <select class="form-control" name="loanType" #loanType="ngModel" [(ngModel)]="loanModel.interestTypeId">
                         <option value="">--Select Interest Type--</option>
-                        <option *ngFor="let interest of allInterestRates" value="1">{{ interest.description }}</option>
+                        <option *ngFor="let interest of allInterestRates" [value]="interest.id">{{ interest.description }}</option>
                       </select>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="form-group row">
                   <div class="col-sm-4">
